local-envoy/envoy.yaml
bootstrap_extensions:
  - name: envoy.bootstrap.wasm
    typed_config:
      "@type": type.googleapis.com/envoy.extensions.wasm.v3.WasmService
      singleton: true
      config:
        configuration:
          "@type": type.googleapis.com/google.protobuf.StringValue
          value: |
            {
                "control-plane-url": "control-plane",
                "control-plane-cluster": "control-plane"
            }
        vm_config:
          vm_id: "request-buffer"
          runtime: "envoy.wasm.runtime.v8"
          code:
            local:
              filename: "/opt/wasm/request_buffer_service.wasm"

static_resources:
  listeners:

    - name: main
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9000

      filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              codec_type: auto
              route_config:
                name: main
                virtual_hosts:
                  - name: http
                    domains:
                      - "http.example.com"
                    routes:
                      - match:
                          prefix: "/"
                        route:
                          cluster: http-service
                  - name: grpc
                    domains:
                      - "grpc.example.com"
                    routes:
                      - match:
                          prefix: "/"
                        route:
                          cluster: grpc-service
              http_filters:
                - name: envoy.filters.http.wasm
                  typed_config:
                    "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                    type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                    value:
                      config:
                        configuration:
                          "@type": type.googleapis.com/google.protobuf.StringValue
                          value: |
                            {
                                "control-plane-url": "control-plane",
                                "control-plane-cluster": "control-plane"
                            }
                        vm_config:
                          vm_id: "request-buffer"
                          runtime: "envoy.wasm.runtime.v8"
                          code:
                            local:
                              filename: "/opt/wasm/request_buffer_filter.wasm"
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: http-service
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: http-upstream
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: upstream
                      port_value: 50001

    - name: grpc-service
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        cluster_name: grpc-upstream
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: upstream
                      port_value: 50002

    - name: control-plane
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: control-plane
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: control-plane
                      port_value: 7001


admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
